--- a/index.html
+++ b/index.html
@@ -62,44 +62,148 @@
 </ul>
 
 <h2>
-<a id="basic-algorithm-scripting-" class="anchor" href="#basic-algorithm-scripting-" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>Basic Algorithm Scripting </strong>
-</h2>
+<a id="basic-html5-and-css" class="anchor" href="#basic-html5-and-css" aria-hidden="true"><span class="octicon octicon-link"></span></a>Basic HTML5 and CSS</h2>
 
 <ul>
-<li>Waypoint: Pair Program on Bonfires It was jsut information.</li>
-<li>Bonfire: [Meet Bonfire It] </li>
-<li>Bonfire: [Reverse a String] </li>
-<li>Bonfire: [Factorialize a Number] </li>
-<li>Bonfire: [Check for Palindromes] </li>
-<li>Bonfire: [Find the Longest Word in a String] </li>
-<li>Bonfire: [Title Case a Sentence] </li>
-<li>Bonfire: [Return Largest Numbers in Arrays] </li>
-<li>Bonfire: [Confirm the Ending] </li>
-<li>Bonfire: [Repeat a string repeat a string] </li>
-<li>Bonfire: [Truncate a string] </li>
-<li>Bonfire: [Chunky Monkey] </li>
-<li>Bonfire: [Slasher Flick] </li>
-<li>Bonfire: [Mutations] </li>
-<li>Bonfire: [Falsey Bouncer] </li>
-<li>Bonfire: [Where art thou?] </li>
-<li>Bonfire: [Seek and Destroy] </li>
-<li>Bonfire: [Where do I belong] </li>
-<li>Bonfire: [Sum All Numbers in a Range] </li>
-<li>Bonfire: [Diff Two Arrays] </li>
-<li>Bonfire: [Roman Numeral Converter] </li>
-<li>Bonfire: [Search and Replace] </li>
-<li>Bonfire: [Pig Latin] </li>
-<li>Bonfire: [DNA Pairing] </li>
-<li>Bonfire: [Missing letters] </li>
-<li>Bonfire: [Boo who] </li>
-<li>Bonfire: [Sorted Union] </li>
-<li>Bonfire: [Convert HTML Entities] </li>
-<li>Bonfire: [Spinal Tap Case]</li>
-<li>Bonfire: [Sum All Odd Fibonacci Numbers] </li>
-<li>Bonfire: [Sum All Primes] </li>
-<li>Bonfire: [Smallest Common Multiple] </li>
-<li>Bonfire: [Finders Keepers] </li>
-<li>Bonfire: [Drop it] </li>
+<li>Waypoint: Say Hello to HTML Elements</li>
+<li>Waypoint: Headline with the h2 Element</li>
+<li>Waypoint: Inform with the Paragraph Element</li>
+<li>Waypoint: Visually Separate Elements with Line Breaks</li>
+<li>Waypoint: Uncomment HTML</li>
+<li>Waypoint: Comment out HTML</li>
+<li>Waypoint: Fill in the Blank with Placeholder Text</li>
+<li>Waypoint: Delete HTML Elements</li>
+<li>Waypoint: Change the Color of Text</li>
+<li>Waypoint: Use CSS Selectors to Style Elements</li>
+<li>Waypoint: Use a CSS Class to Style an Element</li>
+<li>Waypoint: Style Multiple Elements with a CSS Class</li>
+<li>Waypoint: Change the Font Size of an Element</li>
+<li>Waypoint: Set the Font Family of an Element</li>
+<li>Waypoint: Import a Google Font</li>
+<li>Waypoint: Specify How Fonts Should Degrade</li>
+<li>Waypoint: Override Styles with Important</li>
+<li>Waypoint: Add Images to your Website</li>
+<li>Waypoint: Size your Images</li>
+<li>Waypoint: Add Borders Around your Elements</li>
+<li>Waypoint: Add Rounded Corners with a Border Radius</li>
+<li>Waypoint: Make Circular Images with a Border Radius</li>
+<li>Waypoint: Link to External Pages with Anchor Elements</li>
+<li>Waypoint: Wrap an Anchor Element within a Paragraph</li>
+<li>Waypoint: Make Dead Links using the Hash Symbol</li>
+<li>Waypoint: Turn an Image into a Link</li>
+<li>Waypoint: Add Alt Text to an Image for Accessibility</li>
+<li>Waypoint: Create a Bulleted Unordered List</li>
+<li>Waypoint: Create an Ordered List</li>
+<li>Waypoint: Create a Text Field</li>
+<li>Waypoint: Add Placeholder Text to a Text Field</li>
+<li>Waypoint: Create a Form Element</li>
+<li>Waypoint: Add a Submit Button to a Form</li>
+<li>Waypoint: Use HTML5 to Require a Field</li>
+<li>Waypoint: Create a Set of Radio Buttons</li>
+<li>Waypoint: Create a Set of Checkboxes</li>
+<li>Waypoint: Clean up your form using Linebreaks</li>
+<li>Waypoint: Check Radio Buttons and Checkboxes by Default</li>
+<li>Waypoint: Wrap Many Elements within a Single Div Element</li>
+<li>Waypoint: Give a Background Color to a Div Element</li>
+<li>Waypoint: Adjusting the Padding of an Element</li>
+<li>Waypoint: Adjust the Margin of an Element</li>
+<li>Waypoint: Add a Negative Margin to an Element</li>
+<li>Waypoint: Add Different Padding to Each Side of an Element</li>
+<li>Waypoint: Add Different Margins to Each Side of an Element</li>
+<li>Waypoint: Use Clockwise Notation to Specify the Padding of an Element</li>
+<li>Waypoint: Use Clockwise Notation to Specify the Margin of an Element</li>
+</ul>
+
+<h2>
+<a id="responsive-design-with-bootstrap" class="anchor" href="#responsive-design-with-bootstrap" aria-hidden="true"><span class="octicon octicon-link"></span></a>Responsive Design with Bootstrap</h2>
+
+<ul>
+<li>Waypoint: Mobile Responsive Images</li>
+<li>Waypoint: Center Text with Bootstrap</li>
+<li>Waypoint: Create a Bootstrap Button</li>
+<li>Waypoint: Create a Block Element Bootstrap Button</li>
+<li>Waypoint: Taste the Bootstrap Button Color Rainbow</li>
+<li>Waypoint: Call out Optional Actions with Button Info</li>
+<li>Waypoint: Warn your Users of a Dangerous Action</li>
+<li>Waypoint: Use the Bootstrap Grid to Put Elements Side By Side</li>
+<li>Waypoint: Ditch Custom CSS for Bootstrap</li>
+<li>Waypoint: Create a Custom Heading</li>
+<li>Waypoint: Add Font Awesome Icons to our Buttons</li>
+<li>Waypoint: Add Font Awesome Icons all of our Buttons</li>
+<li>Waypoint: Responsively Style Radio Buttons</li>
+<li>Waypoint: Responsively Style Checkboxes</li>
+<li>Waypoint: Style Text Inputs as Form Controls</li>
+<li>Waypoint: Line up Form Elements Responsively with Bootstrap</li>
+</ul>
+
+<h2>
+<a id="jquery" class="anchor" href="#jquery" aria-hidden="true"><span class="octicon octicon-link"></span></a>jQuery</h2>
+
+<ul>
+<li>Waypoint: Get Started with jQuery</li>
+<li>Waypoint: Write Functions with jQuery</li>
+<li>Waypoint: Harness Dynamic HTML</li>
+<li>Waypoint: Listen for jQuery Events</li>
+<li>
+<p>Waypoint: Trigger jQuery Effects</p>
+
+<h2>
+<a id="basic-javascript" class="anchor" href="#basic-javascript" aria-hidden="true"><span class="octicon octicon-link"></span></a>Basic JavaScript</h2>
+</li>
+<li><p>Waypoint: Build an Adventure Game</p></li>
+<li>Waypoint: Build Rock Paper Scissors</li>
+<li>Waypoint: Learn JavaScript For Loops</li>
+<li>Waypoint: Learn JavaScript While Loops</li>
+<li>Waypoint: Learn Control Flow</li>
+<li>Waypoint: Build a Contact List</li>
+<li>Waypoint: Build an Address Book</li>
+<li>Waypoint: Build a Cash Register</li>
+<li>Waypoint: Learn Regular Expressions</li>
+</ul>
+
+<h2>
+<a id="basic-algorithm-scripting" class="anchor" href="#basic-algorithm-scripting" aria-hidden="true"><span class="octicon octicon-link"></span></a>Basic Algorithm Scripting</h2>
+
+<ul>
+<li>Waypoint: Pair Program on Bonfires</li>
+<li>Bonfire: Meet Bonfire It</li>
+<li>Bonfire: Reverse a String</li>
+<li>Bonfire: Factorialize a Number</li>
+<li>Bonfire: Check for Palindromes</li>
+<li>Bonfire: Find the Longest Word in a String</li>
+<li>Bonfire: Title Case a Sentence</li>
+<li>Bonfire: Return Largest Numbers in Arrays</li>
+<li>Bonfire: Confirm the Ending</li>
+<li>Bonfire: Repeat a string repeat a string</li>
+<li>Bonfire: Truncate a string</li>
+<li>Bonfire: Chunky Monkey</li>
+<li>Bonfire: Slasher Flick</li>
+<li>Bonfire: Mutations</li>
+<li>Bonfire: Falsey Bouncer</li>
+<li>Bonfire: Where art thou?</li>
+<li>Bonfire: Seek and Destroy</li>
+<li>Bonfire: Where do I belong</li>
+<li>Bonfire: Sum All Numbers in a Range</li>
+<li>Bonfire: Diff Two Arrays</li>
+<li>Bonfire: Roman Numeral Converter</li>
+<li>Bonfire: Search and Replace</li>
+<li>Bonfire: Pig Latin</li>
+<li>Bonfire: DNA Pairing</li>
+<li>Bonfire: Missing letters</li>
+<li>Bonfire: Boo who</li>
+<li>Bonfire: Sorted Union </li>
+<li>Bonfire: Convert HTML Entities</li>
+<li>Bonfire: Spinal Tap Case</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Bonfire-Sum-All-Odd-Fibonacci-Numbers">Sum All Odd Fibonacci Numbers</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Bonfire-Sum-All-Primes">Sum All Primes</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Bonfire-Smallest-Common-Multiple">Smallest Common Multiple</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Bonfire-Finders-Keepers">Finders Keepers</a>
+</li>
+<li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Bonfire-Drop-it">Drop it</a>
+</li>
 <li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Bonfire-Steamroller">Steamroller</a>
 </li>
 <li>Bonfire: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Bonfire-Binary-Agents">Binary Agents</a>
@@ -111,8 +215,7 @@
 </ul>
 
 <h2>
-<a id="object-oriented-javascript" class="anchor" href="#object-oriented-javascript" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>Object Oriented JavaScript</strong>
-</h2>
+<a id="object-oriented-javascript" class="anchor" href="#object-oriented-javascript" aria-hidden="true"><span class="octicon octicon-link"></span></a>Object Oriented JavaScript</h2>
 
 <ul>
 <li>Waypoint: <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Scope-Your-Variables">Scope Your Variables</a>
@@ -149,16 +252,66 @@
 </ul>
 
 <h2>
-<a id="advanced-algorithm-scripting" class="anchor" href="#advanced-algorithm-scripting" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>Advanced Algorithm Scripting</strong>
-</h2>
+<a id="functional-programming" class="anchor" href="#functional-programming" aria-hidden="true"><span class="octicon octicon-link"></span></a>Functional Programming</h2>
 
 <ul>
-<li>Bonfire: [Validate US Telephone Numbers]</li>
-<li>Bonfire: [Symmetric Difference]</li>
-<li>Bonfire: [Exact Change]</li>
-<li>Bonfire: [Inventory Update]</li>
-<li>Bonfire: [No repeats please]</li>
-<li>Bonfire: [Friendly Date Ranges]</li>
+<li>Waypoint: Practice Functional Programming</li>
+</ul>
+
+<h2>
+<a id="advanced-algorithm-scripting" class="anchor" href="#advanced-algorithm-scripting" aria-hidden="true"><span class="octicon octicon-link"></span></a>Advanced Algorithm Scripting</h2>
+
+<ul>
+<li>Bonfire: Validate US Telephone Numbers</li>
+<li>Bonfire: Symmetric Difference</li>
+<li>Bonfire: Exact Change</li>
+<li>Bonfire: Inventory Update</li>
+<li>Bonfire: No repeats please</li>
+<li>Bonfire: Friendly Date Ranges</li>
+</ul>
+
+<h2>
+<a id="front-end-development-projects" class="anchor" href="#front-end-development-projects" aria-hidden="true"><span class="octicon octicon-link"></span></a>Front End Development Projects</h2>
+
+<ul>
+<li>Waypoint: Get Set for Ziplines</li>
+<li>Zipline: Build a Random Quote Machine</li>
+<li>Zipline: Show the Local Weather</li>
+<li>Zipline: Use the Twitch.tv JSON API</li>
+<li>Zipline: Stylize Stories on Camper News</li>
+<li>Zipline: Wikipedia Viewer</li>
+<li>Zipline: Build a Pomodoro Clock</li>
+<li>Zipline: Build a JavaScript Calculator</li>
+<li>Zipline: Build a Tic Tac Toe Game</li>
+</ul>
+
+<h2>
+<a id="full-stack-javascript" class="anchor" href="#full-stack-javascript" aria-hidden="true"><span class="octicon octicon-link"></span></a>Full Stack JavaScript</h2>
+
+<ul>
+<li>Waypoint: Get Started with Angular.js</li>
+<li>Waypoint: Apply Angular.js Directives</li>
+<li>Waypoint: Power Forms with Angular.js</li>
+<li>Waypoint: Customize Angular.js Directives</li>
+<li>Waypoint: Create Angular.js Services</li>
+<li>Waypoint: Manage Packages with NPM</li>
+<li>Waypoint: Start a Node.js Server</li>
+<li>Waypoint: Continue working with Node.js Servers</li>
+<li>Waypoint: Finish working with Node.js Servers</li>
+<li>Waypoint: Build Web Apps with Express.js</li>
+<li>Waypoint: Manage Source Code with Git</li>
+</ul>
+
+<h2>
+<a id="full-stack-javascript-projects" class="anchor" href="#full-stack-javascript-projects" aria-hidden="true"><span class="octicon octicon-link"></span></a>Full Stack JavaScript Projects</h2>
+
+<ul>
+<li>Waypoint: Get Set for Basejumps</li>
+<li>Basejump: Build a Voting App</li>
+<li>Basejump: Build a Nightlife Coordination App</li>
+<li>Basejump: Chart the Stock Market</li>
+<li>Basejump: Manage a Book Trading Club</li>
+<li>Basejump: Build a Pinterest Clone</li>
 </ul>
         </article>
       </div>
